--- a/src/styles/_module-dish.scss
+++ b/src/styles/_module-dish.scss
@@ -77,7 +77,8 @@
 
 .dish {
   display: none;
-  position: relative;
+  position: absolute;
+  width: 100%;
 
   &.is-active {
     display: block;
@@ -99,6 +100,7 @@
     @include shadow(large, color(darkest), inset);
     z-index: 4001;
     padding-bottom: 6rem;
+    min-height: calc(100vh - 2rem);
   }
 
   section {
